# pam-ssh-auth-info

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  doc.mk  groff.css  index.css  index.md  line_tokens_match.h  line_tokens_match_test.c  line_tokens_match_test.h  pam_ssh_auth_info.8  pam_ssh_auth_info.c  pam_ssh_auth_info.html  pam_syslog.h  pattern.h  pattern_test.c  tokens_match.h  tokens_match_fuzzer.c  tokens_match_fuzzer_input
.github/workflows/: build.yml
contrib/: pam-ssh-auth-info.spec.in
debian/: changelog  control  copyright  libpam-ssh-auth-info.install  not-installed  rules
