#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.69])
AC_INIT([pam-ssh-auth-info], [1.0.20210117], [Eero+pam-ssh-auth-info@Häkkinen.fi], [], [https://github.Eero.Häkkinen.fi/pam-ssh-auth-info/])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SRCDIR([line_tokens_match.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
